--- a/about.html
+++ b/about.html
@@ -75,6 +75,8 @@
     <!-- Style CSS -->
     <link rel="stylesheet" href="css/style.css">
 
+
+
 </head>
 
 <body data-plugin-page-transition>
@@ -155,10 +157,10 @@
                                 <a href="catalog.html" class="menu">Catalog</a>
                             </li>
                             <li>
-                                <a href="#" class="menu">News</a>
+                                <a href="news.html" class="menu">News</a>
                             </li>
                             <li>
-                                <a href="#" class="menu">Contact</a>
+                                <a href="contact.html" class="menu">Contact</a>
                             </li>
                             <form action="/action_page.php" class="search-menu">
                                 <input type="text" class="search-home" placeholder="What are you looking for?"
@@ -204,10 +206,10 @@
                                                 <a href="catalog.html">Catalog</a>
                                             </li>
                                             <li>
-                                                <a href="#">News</a>
+                                                <a href="news.html">News</a>
                                             </li>
                                             <li>
-                                                <a href="#">Contact</a>
+                                                <a href="contact.html">Contact</a>
                                             </li>
                                         </ul>
                                     </nav>
@@ -231,7 +233,7 @@
                 </div>
             </div>
         </header>
-       
+
         <main id="main" class="main">
 
             <section style="background-color: #000;" class="py-3">
@@ -240,12 +242,12 @@
                         <div class="col-lg-3">
                             <img src="img/doodle-sabi.png" alt="" srcset=""
                                 class="doodle doodle-about reveal fade-left">
-                            <div class="title-page-about title-section">
+                            <div class="title-page-about title-section reveal fade-left">
                                 <h3>ABOUT</h3>
                             </div>
                         </div>
                         <div class="col-lg-9">
-                            <div class="content-desc-about">
+                            <div class="content-desc-about reveal fade-right">
                                 <p>KOSMIK lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam What are
                                     you
                                     looking for?
@@ -267,12 +269,12 @@
                 <div class="container-fluid reveal bottom">
                     <div class="row">
                         <div class="col-lg-12">
-                            <div class="title-our-service title-section">
+                            <div class="title-our-service title-section reveal fade-left">
                                 <h3>OUR SERVICES</h3>
                             </div>
                         </div>
                         <div class="col-lg-6">
-                            <div class="list-services">
+                            <div class="list-services reveal fade-left">
                                 <ul>
                                     <li><span>Comic Illustration/Social Media Content</span></li>
                                     <li><span>Animation</span></li>
@@ -280,7 +282,7 @@
                             </div>
                         </div>
                         <div class="col-lg-6">
-                            <div class="list-services">
+                            <div class="list-services reveal fade-right">
                                 <ul>
                                     <li><span>Social Campaign Media Based Comic</span></li>
                                     <li><span>Social Media Account Management</span></li>
@@ -289,7 +291,8 @@
                         </div>
 
                         <div class="col-lg-12">
-                            <img src="img/slider-kosmik-3.jpg" class="img-fluid img-our-service-about" alt="...">
+                            <img src="img/slider-kosmik-3.jpg"
+                                class="img-fluid img-our-service-about reveal fade-bottom" alt="...">
                         </div>
                     </div>
                 </div>
@@ -381,7 +384,8 @@
                                             class="team-img-hover">
                                         <div class="desc-team">
                                             <h5 style="margin-bottom: 0; font-weight: bold">NAME</h5>
-                                            <h5 style="margin: 0; font-weight: bold; color: #4d4d4d !important">TITLE</h5>
+                                            <h5 style="margin: 0; font-weight: bold; color: #4d4d4d !important">TITLE
+                                            </h5>
                                         </div>
 
                                     </a>
@@ -395,7 +399,8 @@
                                             class="team-img-hover">
                                         <div class="desc-team">
                                             <h5 style="margin-bottom: 0; font-weight: bold">NAME</h5>
-                                            <h5 style="margin: 0; font-weight: bold; color: #4d4d4d !important">TITLE</h5>
+                                            <h5 style="margin: 0; font-weight: bold; color: #4d4d4d !important">TITLE
+                                            </h5>
                                         </div>
 
                                     </a>
@@ -409,7 +414,8 @@
                                             class="team-img-hover">
                                         <div class="desc-team">
                                             <h5 style="margin-bottom: 0; font-weight: bold">NAME</h5>
-                                            <h5 style="margin: 0; font-weight: bold; color: #4d4d4d !important">TITLE</h5>
+                                            <h5 style="margin: 0; font-weight: bold; color: #4d4d4d !important">TITLE
+                                            </h5>
                                         </div>
 
                                     </a>
@@ -423,7 +429,8 @@
                                             class="team-img-hover">
                                         <div class="desc-team">
                                             <h5 style="margin-bottom: 0; font-weight: bold">NAME</h5>
-                                            <h5 style="margin: 0; font-weight: bold; color: #4d4d4d !important">TITLE</h5>
+                                            <h5 style="margin: 0; font-weight: bold; color: #4d4d4d !important">TITLE
+                                            </h5>
                                         </div>
 
                                     </a>
@@ -437,7 +444,8 @@
                                             class="team-img-hover">
                                         <div class="desc-team">
                                             <h5 style="margin-bottom: 0; font-weight: bold">NAME</h5>
-                                            <h5 style="margin: 0; font-weight: bold; color: #4d4d4d !important">TITLE</h5>
+                                            <h5 style="margin: 0; font-weight: bold; color: #4d4d4d !important">TITLE
+                                            </h5>
                                         </div>
 
                                     </a>
@@ -468,7 +476,8 @@
                                                             NAME</h5>
                                                         <h5 style="margin: 0; font-weight: bold; color:#000">TITLE
                                                         </h5>
-                                                        <p style="font-weight: bold; color:#000; font-size: 1vw">Founder of KOSMIK.
+                                                        <p style="font-weight: bold; color:#000; font-size: 1vw">Founder
+                                                            of KOSMIK.
                                                             Co-founder of
                                                             Popcon Asia. Colorist for Marvel and DC.
                                                             One of the creators of <a href="#"
@@ -506,8 +515,8 @@
                         <ul class="list list-unstyled mb-0">
                             <li class="mb-0"><a href="about.html">About</a></li>
                             <li class="mb-0"><a href="catalog.html">Catalog</a></li>
-                            <li class="mb-0"><a href="#">News</a></li>
-                            <li class="mb-0"><a href="#">Contact</a></li>
+                            <li class="mb-0"><a href="news.html">News</a></li>
+                            <li class="mb-0"><a href="contact.html">Contact</a></li>
                         </ul>
                     </div>
                     <div class="col-md-6 col-lg-2 col-xs-6 mb-5 mb-md-0 list-sosial-media-footer">
@@ -521,7 +530,7 @@
 
                     </div>
                     <div class="col-md-6 col-lg-3 list-bussiness-footer">
-                        <h6>Bussiness :</h6>
+                        <h5 style="color: #fff !important">Bussiness :</h5>
                         <p>email bussiness kosmik@gmail.com</p>
                         <p>+62 888 xxxx xxxx</p>
                     </div>
@@ -575,6 +584,7 @@
     <!-- UIkit JS -->
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.13.1/dist/js/uikit.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.13.1/dist/js/uikit-icons.min.js"></script>
+    
     <script src="js/script.js"></script>
 
 </body>
