--- a/catalog.html
+++ b/catalog.html
@@ -75,6 +75,8 @@
     <!-- Style CSS -->
     <link rel="stylesheet" href="css/style.css">
 
+
+
 </head>
 
 <body data-plugin-page-transition>
@@ -155,10 +157,10 @@
                                 <a href="catalog.html" class="menu">Catalog</a>
                             </li>
                             <li>
-                                <a href="#" class="menu">News</a>
+                                <a href="news.html" class="menu">News</a>
                             </li>
                             <li>
-                                <a href="#" class="menu">Contact</a>
+                                <a href="contact.html" class="menu">Contact</a>
                             </li>
                             <form action="/action_page.php" class="search-menu">
                                 <input type="text" class="search-home" placeholder="What are you looking for?"
@@ -204,10 +206,10 @@
                                                 <a href="catalog.html">Catalog</a>
                                             </li>
                                             <li>
-                                                <a href="#">News</a>
+                                                <a href="news.html">News</a>
                                             </li>
                                             <li>
-                                                <a href="#">Contact</a>
+                                                <a href="contact.html">Contact</a>
                                             </li>
                                         </ul>
                                     </nav>
@@ -240,7 +242,8 @@
                             <div class="tabs">
                                 <ul class="nav nav-tabs">
                                     <li class="nav-item">
-                                        <a class="nav-link active" href="#published" data-bs-toggle="tab">Published Titles</a>
+                                        <a class="nav-link active" href="#published" data-bs-toggle="tab">Published
+                                            Titles</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="#pilot" data-bs-toggle="tab">Pilot Titles</a>
@@ -253,7 +256,8 @@
                                                 <div class="my-5 col-lg-12 col-yellow">
                                                     <div class="catalog-item-wrap reveal fade-left">
                                                         <span class="catalog-title">CODE<br>HELIX</span>
-                                                        <span class="catalog-author">by Nikki Dibya Wardhana,<br>Bryan Arfiandy</span>
+                                                        <span class="catalog-author">by Nikki Dibya Wardhana,<br>Bryan
+                                                            Arfiandy</span>
                                                         <button class="btn btn-black" type="button">More Info <span
                                                                 class="glyphicon glyphicon-play"></span></button>
                                                     </div>
@@ -279,8 +283,8 @@
                                         <div class="container-fluid reveal fade-bottom">
                                             <div class="row">
                                                 <div class="col-lg-3">
-                                                    <div class="pilot-post col-yellow">                                                        
-                                                    <img src="img/pilot-2.png">
+                                                    <div class="pilot-post col-yellow">
+                                                        <img src="img/pilot-2.png">
                                                     </div>
                                                     <div class="pilot-title-wrap">
                                                         <p class="title">lorem ipsum</p>
@@ -288,8 +292,8 @@
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-3">
-                                                    <div class="pilot-post col-yellow">                                                        
-                                                    <img src="img/pilot-2.png">
+                                                    <div class="pilot-post col-yellow">
+                                                        <img src="img/pilot-2.png">
                                                     </div>
                                                     <div class="pilot-title-wrap">
                                                         <p class="title">lorem ipsum</p>
@@ -297,8 +301,8 @@
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-3">
-                                                    <div class="pilot-post col-yellow">                                                        
-                                                    <img src="img/pilot-2.png">
+                                                    <div class="pilot-post col-yellow">
+                                                        <img src="img/pilot-2.png">
                                                     </div>
                                                     <div class="pilot-title-wrap">
                                                         <p class="title">lorem ipsum</p>
@@ -306,8 +310,8 @@
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-3">
-                                                    <div class="pilot-post col-yellow">                                                        
-                                                    <img src="img/pilot-2.png">
+                                                    <div class="pilot-post col-yellow">
+                                                        <img src="img/pilot-2.png">
                                                     </div>
                                                     <div class="pilot-title-wrap">
                                                         <p class="title">lorem ipsum</p>
@@ -315,8 +319,8 @@
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-3">
-                                                    <div class="pilot-post col-yellow">                                                        
-                                                    <img src="img/pilot-2.png">
+                                                    <div class="pilot-post col-yellow">
+                                                        <img src="img/pilot-2.png">
                                                     </div>
                                                     <div class="pilot-title-wrap">
                                                         <p class="title">lorem ipsum</p>
@@ -324,8 +328,8 @@
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-3">
-                                                    <div class="pilot-post col-yellow">                                                        
-                                                    <img src="img/pilot-2.png">
+                                                    <div class="pilot-post col-yellow">
+                                                        <img src="img/pilot-2.png">
                                                     </div>
                                                     <div class="pilot-title-wrap">
                                                         <p class="title">lorem ipsum</p>
@@ -333,8 +337,8 @@
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-3">
-                                                    <div class="pilot-post col-yellow">                                                        
-                                                    <img src="img/pilot-2.png">
+                                                    <div class="pilot-post col-yellow">
+                                                        <img src="img/pilot-2.png">
                                                     </div>
                                                     <div class="pilot-title-wrap">
                                                         <p class="title">lorem ipsum</p>
@@ -342,8 +346,8 @@
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-3">
-                                                    <div class="pilot-post col-yellow">                                                        
-                                                    <img src="img/pilot-2.png">
+                                                    <div class="pilot-post col-yellow">
+                                                        <img src="img/pilot-2.png">
                                                     </div>
                                                     <div class="pilot-title-wrap">
                                                         <p class="title">lorem ipsum</p>
@@ -372,8 +376,8 @@
                         <ul class="list list-unstyled mb-0">
                             <li class="mb-0"><a href="about.html">About</a></li>
                             <li class="mb-0"><a href="catalog.html">Catalog</a></li>
-                            <li class="mb-0"><a href="#">News</a></li>
-                            <li class="mb-0"><a href="#">Contact</a></li>
+                            <li class="mb-0"><a href="news.html">News</a></li>
+                            <li class="mb-0"><a href="contact.html">Contact</a></li>
                         </ul>
                     </div>
                     <div class="col-md-6 col-lg-2 col-xs-6 mb-5 mb-md-0 list-sosial-media-footer">
@@ -387,7 +391,7 @@
 
                     </div>
                     <div class="col-md-6 col-lg-3 list-bussiness-footer">
-                        <h6>Bussiness :</h6>
+                        <h5 style="color: #fff !important">Bussiness :</h5>
                         <p>email bussiness kosmik@gmail.com</p>
                         <p>+62 888 xxxx xxxx</p>
                     </div>
@@ -441,6 +445,7 @@
     <!-- UIkit JS -->
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.13.1/dist/js/uikit.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.13.1/dist/js/uikit-icons.min.js"></script>
+    
     <script src="js/script.js"></script>
 
 </body>
