--- a/contact.html
+++ b/contact.html
@@ -235,154 +235,50 @@
         </header>
 
         <main id="main" class="main">
-            <section class="py-5" style="padding-bottom: 0 !important">
+            <section>
+                <img src="img/banner-kontak.jpg" class="img-fluid">
+            </section>
+            <section class="py-4 dark-section">
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="col-lg-2">
-                            <h4 style="font-weight: 700">
-                                NEWS
-                            </h4>
-                            <div class="accordion accordion-modern-status accordion-modern-status-borders accordion-modern-status-arrow"
-                                id="accordion200">
-                                <div class="card card-default">
-                                    <div class="card-header" id="collapse200HeadingOne">
-                                        <h4 class="card-title m-0">
-                                            <a class="accordion-toggle text-color-dark font-weight-bold collapsed"
-                                                data-bs-toggle="collapse" data-bs-target="#collapse200One"
-                                                aria-expanded="false" aria-controls="collapse200One">
-                                                CATEGORIES
-                                            </a>
-                                        </h4>
-                                    </div>
-                                    <div id="collapse200One" class="collapse" aria-labelledby="collapse200HeadingOne"
-                                        data-bs-parent="#accordion200">
-                                        <div class="card-body">
-                                            <ul>
-                                                <li>
-                                                    <a href="#">LOREM IPSUM</a>
-                                                </li>
-                                                <li>
-                                                    <a href="#">LOREM IPSUM</a>
-                                                </li>
-                                                <li>
-                                                    <a href="#">LOREM IPSUM</a>
-                                                </li>
-                                                <li>
-                                                    <a href="#">LOREM IPSUM</a>
-                                                </li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="card card-default">
-                                    <div class="card-header" id="collapse200HeadingTwo">
-                                        <h4 class="card-title m-0">
-                                            <a class="accordion-toggle text-color-dark font-weight-bold collapsed"
-                                                data-bs-toggle="collapse" data-bs-target="#collapse200Two"
-                                                aria-expanded="false" aria-controls="collapse200Two">
-                                                SORT<br>
-                                                BY YEAR
-                                            </a>
-                                        </h4>
-                                    </div>
-                                    <div id="collapse200Two" class="collapse" aria-labelledby="collapse200HeadingTwo"
-                                        data-bs-parent="#accordion200">
-                                        <div class="card-body">
-                                            <div class="form-check">
-                                                <input class="form-check-input" type="radio" name="sortbyyear" id="all"
-                                                    value="all" checked="">
-                                                <label class="form-check-label" for="all">
-                                                    All
-                                                </label>
-                                            </div>
-                                            <div class="form-check">
-                                                <input class="form-check-input" type="radio" name="sortbyyear" id="2022"
-                                                    value="2022">
-                                                <label class="form-check-label" for="2022">
-                                                    2022
-                                                </label>
-                                            </div>
-                                            <div class="form-check">
-                                                <input class="form-check-input" type="radio" name="sortbyyear" id="2021"
-                                                    value="2021">
-                                                <label class="form-check-label" for="2021">
-                                                    2021
-                                                </label>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <img src="img/doodle-sabi2.png" class="img-fluid doodle doodle-news reveal fade-left">
+                        <div class="col-lg-3">
+                            <h3>
+                                CONTACT
+                            </h3>
                         </div>
-                        <div class="col-lg-10 reveal fade-right">
-                            <div class="container-fluid">
-                                <div class="row">
-                                    <div class="col-lg-8">
-                                        <img src="img/news-1.jpg" class="img-fluid">
-                                    </div>
-                                    <div class="col-lg-4">
-                                        <h5>FUNFACT</h5>
-                                        <p style="font-size: 1vw">25 Jan 2022 by Lorem Ipsum</p>
-                                        <h4>JUDUL ARTIKEL</h4>
-                                        <p style="position: absolute; bottom: 0">
-                                            Lorem ipsum dolor sit amet,
-                                            consectetuer adipiscing elit,
-                                            sed diam nonummy nibh
-                                            euismod tincidunt ut.</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="py-5 container-fluid">
-                                <div class="row">
-                                    <div class="col">
-                                        <hr
-                                            style="background-color: rgb(0,0,0, 0.7); height: 3px; margin: 0 !important">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="pb-3 container-fluid">
-                                <div class="row">
-                                    <div class="col-lg-6 reveal fade-bottom">
-                                        <img src="img/news-1.jpg" class="img-fluid">
-                                        <div class="news-item-detail mb-5">
-                                            <p style="font-size: 1vw;"><strong style="color:#000">KATEGORI BERITA
-                                                </strong>18 Jan 2022 by Lorem Ipsum</p>
-                                            <h4>JUDUL ARTIKEL LOREM IPSUM DOLOR SIT
-                                                AMET, CONSECTETUER</h5>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-6 reveal fade-bottom">
-                                        <img src="img/news-1.jpg" class="img-fluid">
-                                        <div class="news-item-detail mb-5">
-                                            <p style="font-size: 1vw;"><strong style="color:#000">KATEGORI BERITA
-                                                </strong>18 Jan 2022 by Lorem Ipsum</p>
-                                            <h4>JUDUL ARTIKEL LOREM IPSUM DOLOR SIT
-                                                AMET, CONSECTETUER</h5>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-6 reveal fade-bottom">
-                                        <img src="img/news-1.jpg" class="img-fluid">
-                                        <div class="news-item-detail mb-5">
-                                            <p style="font-size: 1vw;"><strong style="color:#000">KATEGORI BERITA
-                                                </strong>18 Jan 2022 by Lorem Ipsum</p>
-                                            <h4>JUDUL ARTIKEL LOREM IPSUM DOLOR SIT
-                                                AMET, CONSECTETUER</h5>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-6 reveal fade-bottom">
-                                        <img src="img/news-1.jpg" class="img-fluid">
-                                        <div class="news-item-detail mb-5">
-                                            <p style="font-size: 1vw;"><strong style="color:#000">KATEGORI BERITA
-                                                </strong>18 Jan 2022 by Lorem Ipsum</p>
-                                            <h4>JUDUL ARTIKEL LOREM IPSUM DOLOR SIT
-                                                AMET, CONSECTETUER</h5>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                        <div class="col-lg-6">
+                            <p>
+                                KOSMIK NETWORK<br>
+                                Isi alamat lorem ipsum dolor sit amet,
+                                consectetuer adipiscing elit, sed diam nonummy nibh</p>
+                                <p>
+                                email business kosmik@gmail.com
+                                +62 xxx xxxx xxxx
+                            </p>
                         </div>
                     </div>
+                </div>
+                <div class="py-4 container-fluid pb-5">
+                    <div class="row">
+                        <div class="col">
+                            <hr style="background-color: #fff; height: 2px; margin: 0 !important">
+                        </div>
+                    </div>
+                </div>
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-lg-12 pb-3">
+                            <h4>BUSINESS</h4>
+                            <p>Bla bla untuk bisnis bisa kirim email ke email business kosmik@gmail.com atau melalui +62 xxx xxxx xxxx lorem ipsum dolor sit
+                                amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet.</p>
+                        </div>
+                        <div class="col-lg-12">
+                            <h4>JOBS & INTERNSHIP</h4>
+                            <p>Bla bla untuk detail lowongan kerja dan internship dapat dilihat di Instagram Lorem ipsum dolor sit amet, consectetuer
+                                adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat.</p>
+                        </div>
+                    </div>
+                </div>
             </section>
         </main>
 
@@ -466,8 +362,8 @@
     <!-- UIkit JS -->
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.13.1/dist/js/uikit.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.13.1/dist/js/uikit-icons.min.js"></script>
-    
-    <script src="js/script.js"></script>
+        
+<script src="js/script.js"></script>
 
 </body>
 
