--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
     <!-- Style CSS -->
     <link rel="stylesheet" href="css/style.css">
 
+
+
+
 </head>
 
 <body data-plugin-page-transition>
@@ -155,10 +158,10 @@
                                 <a href="catalog.html" class="menu">Catalog</a>
                             </li>
                             <li>
-                                <a href="#" class="menu">News</a>
+                                <a href="news.html" class="menu">News</a>
                             </li>
                             <li>
-                                <a href="#" class="menu">Contact</a>
+                                <a href="contact.html" class="menu">Contact</a>
                             </li>
                             <form action="/action_page.php" class="search-menu">
                                 <input type="text" class="search-home" placeholder="What are you looking for?"
@@ -204,10 +207,10 @@
                                                 <a href="catalog.html">Catalog</a>
                                             </li>
                                             <li>
-                                                <a href="#">News</a>
+                                                <a href="news.html">News</a>
                                             </li>
                                             <li>
-                                                <a href="#">Contact</a>
+                                                <a href="contact.html">Contact</a>
                                             </li>
                                         </ul>
                                     </nav>
@@ -285,21 +288,24 @@
                                 <div class="carousel-inner">
                                     <div class="carousel-item active" data-bs-interval="10000">
                                         <img src="img/slider-kosmik-1.jpg" class="d-block w-100 img-featured" alt="...">
-                                        <div class="carousel-caption d-none d-md-block content-slider-featured">
+                                        <div
+                                            class="carousel-caption d-none d-md-block content-slider-featured reveal fade-right">
                                             <h1>Code Helix</h1>
                                             <p>by Nikki Dibya Wardhana, Bryan Arfiandy</p>
                                         </div>
                                     </div>
                                     <div class="carousel-item" data-bs-interval="10000">
                                         <img src="img/slider-kosmik-2.jpg" class="d-block w-100 img-featured" alt="...">
-                                        <div class="carousel-caption d-none d-md-block  content-slider-featured">
+                                        <div
+                                            class="carousel-caption d-none d-md-block  content-slider-featured reveal fade-right">
                                             <h1>Code Helix</h1>
                                             <p>by Nikki Dibya Wardhana, Bryan Arfiandy</p>
                                         </div>
                                     </div>
                                     <div class="carousel-item" data-bs-interval="10000">
                                         <img src="img/slider-kosmik-3.jpg" class="d-block w-100 img-featured" alt="...">
-                                        <div class="carousel-caption d-none d-md-block  content-slider-featured">
+                                        <div
+                                            class="carousel-caption d-none d-md-block  content-slider-featured reveal fade-right">
                                             <h1>Code Helix</h1>
                                             <p>by Nikki Dibya Wardhana, Bryan Arfiandy</p>
                                         </div>
@@ -352,8 +358,10 @@
                         </div>
 
                         <div class="span9 btn-block">
-                            <button class="btn btn-large btn-block btn-primary" type="button">See Catalog <span
-                                    class="glyphicon glyphicon-play"></span></button>
+                            <a href="catalog.html">
+                                <button class="btn btn-large btn-block btn-primary" type="button">See Catalog <span
+                                        class="glyphicon glyphicon-play"></span></button>
+                            </a>
                         </div>
                     </div>
             </section>
@@ -467,8 +475,10 @@
 
                         </div>
                         <div class="span9 btn-block">
-                            <button class="btn btn-large btn-block btn-primary" type="button">More News <span
-                                    class="glyphicon glyphicon-play"></span></button>
+                            <a href="news.html">
+                                <button class="btn btn-large btn-block btn-primary" type="button">More News <span
+                                        class="glyphicon glyphicon-play"></span></button>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -504,8 +514,10 @@
                                 <p>+62 8888 xxxx xxxx</p>
                             </div>
                             <div class="span9 btn-block">
-                                <button class="btn btn-large btn-block btn-primary" type="button">More Info <span
-                                        class="glyphicon glyphicon-play"></span></button>
+                                <a href="news.html">
+                                    <button class="btn btn-large btn-block btn-primary" type="button">More Info <span
+                                            class="glyphicon glyphicon-play"></span></button>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -524,8 +536,8 @@
                         <ul class="list list-unstyled mb-0">
                             <li class="mb-0"><a href="about.html">About</a></li>
                             <li class="mb-0"><a href="catalog.html">Catalog</a></li>
-                            <li class="mb-0"><a href="#">News</a></li>
-                            <li class="mb-0"><a href="#">Contact</a></li>
+                            <li class="mb-0"><a href="news.html">News</a></li>
+                            <li class="mb-0"><a href="contact.html">Contact</a></li>
                         </ul>
                     </div>
                     <div class="col-md-6 col-lg-2 col-xs-6 mb-5 mb-md-0 list-sosial-media-footer">
@@ -539,7 +551,7 @@
 
                     </div>
                     <div class="col-md-6 col-lg-3 list-bussiness-footer">
-                        <h6>Bussiness :</h6>
+                        <h5 style="color: #fff !important">Bussiness :</h5>
                         <p>email bussiness kosmik@gmail.com</p>
                         <p>+62 888 xxxx xxxx</p>
                     </div>
@@ -593,7 +605,9 @@
     <!-- UIkit JS -->
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.13.1/dist/js/uikit.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.13.1/dist/js/uikit-icons.min.js"></script>
+    
     <script src="js/script.js"></script>
+
 
 </body>
 
